--- a/pr-nesrece.ipynb
+++ b/pr-nesrece.ipynb
@@ -56,7 +56,7 @@
    "id": "6081fbde-2a10-4e0b-98ac-d635af618d90",
    "metadata": {},
    "source": [
-    "Upravne enote kjer se je med leti 2009 in 2023 zgodilo največ nesreč"
+    "Območja, kjer se je med leti 2009 in 2023 zgodilo največ nesreč"
    ]
   },
   {
